feat: introduce Product DTOs and MapStruct mappers; update service & controller